# OCR

./: README.md  example.ipynb  inference.py  main.py  pyproject.toml  requirements.txt  setup.py
DocEasyOCR/: __init__.py  inference.py
config/: cfg.py
utils/: classification_utils.py  confusion_matrics.py  detector_utils.py  ocr_metrics.py  prediction_utils.py  prepare_images.py  recognizer_utils.py
