[tool.poetry]
name = "DocEasyOCR"
version = "0.1.1"
description = ""
authors = ["Dmitry Trefilov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
easyocr = "^1.7.1"
onnx = "^1.16.0"
onnxruntime = "^1.17.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
